@@ -1,0 +1,49 @@
+/**
+ * NetXMS - open source network management system
+ * Copyright (C) 2003-2013 Victor Kirhenshtein
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ */
+package org.netxms.client;
+
+
+/**
+ * Tests for scripting functions
+ */
+public class ScriptTest extends AbstractSessionTest
+{
+   public void testAddressMap() throws Exception
+   {
+      final NXCSession session = connect();
+
+      ScriptCompilationResult r = session.compileScript("a = 1; b = 2; return a / b;", true);
+      assertTrue(r.success);
+      assertNotNull(r.code);
+      assertNull(r.errorMessage);
+      
+      r = session.compileScript("a = 1; b = 2; return a / b;", false);
+      assertTrue(r.success);
+      assertNull(r.code);
+      assertNull(r.errorMessage);
+      
+      r = session.compileScript("a = 1*; b = 2; return a / b;", false);
+      assertFalse(r.success);
+      assertNull(r.code);
+      assertNotNull(r.errorMessage);
+      System.out.println("Compilation error message: \"" + r.errorMessage + "\"");
+      
+      session.disconnect();
+   }
+}
